[tool.poetry]
name = "market-base"
version = "0.1.0"
description = ""
authors = ["UnHeat <anbi2682006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.135.1"
pwdlib = {extras = ["argon2"], version = "^0.3.0"}
pydantic = "2.12.5"
python-dotenv = "1.2.2"
sqlalchemy = "2.0.30"
uvicorn = "^0.41.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
